@@ -1470,17 +1470,13 @@ func (s *State) checkIOSInterfaces() error {
 		name := strings.Fields(c.parsed)[1]
 		bIntf[name] = extractIntfInfo(c)
 	}
-	// If config from Netspoc has no interface definitions, it is probably
-	// of type "managed=routing_only", and Netspoc won't change any
-	// interface config.
-	if len(bIntf) == 0 {
-		return nil
-	}
 	for _, c := range s.a.lookup["interface"][""] {
 		name := strings.Fields(c.parsed)[1]
 		aInfo := extractIntfInfo(c)
 		aKnown[name] = true
 		if aInfo.shut {
+			// Mark referenced ACLs that must not be deleted.
+			s.markNeeded(c)
 			continue
 		}
 		if bInfo := bIntf[name]; bInfo != nil {
@@ -1500,9 +1496,16 @@ func (s *State) checkIOSInterfaces() error {
 					"Different VRFs defined for interface %s:"+
 						" Device: %s, Netspoc: %s", name, aInfo.vrf, bInfo.vrf)
 			}
-		} else if aInfo.addr != "" {
-			device.Warning(
-				"Interface '%s' on device is not known by Netspoc", name)
+		} else {
+			// Mark referenced ACLs that must not be deleted.
+			s.markNeeded(c)
+			// If config from Netspoc has no interface definitions, it is
+			// probably of type "managed=routing_only", and Netspoc won't
+			// change any interface config.
+			if aInfo.addr != "" && len(bIntf) != 0 {
+				device.Warning(
+					"Interface '%s' on device is not known by Netspoc", name)
+			}
 		}
 	}
 	for _, c := range s.b.lookup["interface"][""] {
@@ -1561,6 +1564,10 @@ func (s *State) alignVRFs() {
 					l[j] = c
 					j++
 				} else {
+					// If this unmanaged interface references some ACL, that
+					// was previously generated by Netspoc, this ACL must
+					// not accidently be deleted.
+					s.markNeeded(c)
 					removed[vrf] = true
 				}
 			}
@@ -1577,6 +1584,20 @@ func (s *State) alignVRFs() {
 			vrf = "<global>"
 		}
 		device.Info("Leaving VRF %s untouched", vrf)
+	}
+}
+
+// Mark command and referenced commands as still needed.
+func (s *State) markNeeded(c *cmd) {
+	c.needed = true
+	for i, name := range c.ref {
+		prefix := c.typ.ref[i]
+		for _, ref := range s.a.lookup[prefix][name] {
+			s.markNeeded(ref)
+		}
+	}
+	for _, sub := range c.sub {
+		s.markNeeded(sub)
 	}
 }
 
